fix(936): A10-A13 review fixes — major 11 residue sweep (items 3-6)
Four sweep items, plus two the sweep turned up next door.

**JUSTSEARCH_WORKER_HEAP deleted.** Its only consumer was WorkerSpawner's
-Xmx flag for the Worker child. Verified dead before deleting: zero call
sites of the accessor anywhere, the only readers being the record's own
constructor and nine tests passing "256m" positionally. Gone with its
DEFAULT_WORKER_HEAP constant, the doc row, and the nine test sites. The
measured evidence its javadoc carried (tempdocs 682 and 686) lives in those
tempdocs; only the code-site copy went.

**JUSTSEARCH_JVM_OPTS deleted too** — found while checking the row above.
Same cause, also documented as if it worked, and it has zero readers
anywhere in the tree. A11 deleted the spawner and left two operator-facing
env vars in the reference table promising behaviour nothing implements.

**dev-runner.cjs prose.** Four passages describing a Worker child.
The most misleading said the 503 window exists because "the Worker
connects a beat later"; it is an in-process async start
(HeadlessApp.java:981 forks the index-half boot in parallel with API
construction). Another attributed the io.justsearch INFO default to the
Worker's logback, which went with the child — it is the Engine's
(ui/logback.xml:136). The tempdoc 819 measurement is preserved and now
labelled as taken while the Worker was still a child.

**SupervisionContractTest suicide-pact prose.** The register row is
retired, and the test asserts a record-keeping property of a retired row,
not a live mechanism. Says so now. No assertion changed — the two
assertions are byte-identical, and the renamed case is confirmed executing
in the result XML.

**sysaccess-allowlist header count**: 104 -> 95, re-derived with the gate's
own counting rule and cross-checked against main (104 - 10 removed + 1
added = 95).

**config-surface baseline: not touched, because the premise was wrong.**
The review assumed deleting WORKER_HEAP would